force-app/main/default/objects/Customer_Address__c/fields/Address_Description__c.field-meta.xml
<CustomField>
    <fullName>Address_Description__c</fullName>
    <label>Address Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>