force-app/main/default/objects/Customer_Address__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>sold-to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.SAP_Customer_Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Addresses</relationshipLabel>
    <relationshipName>Customer_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>