force-app/main/default/objects/Customer_Address__c/fields/Customer_Extend_Sales__c.field-meta.xml
<CustomField>
    <fullName>Customer_Extend_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Extend Sales</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Customer__c</field>
            <operation>equals</operation>
            <valueField>Customer_Extend__c.Customer__c</valueField>
        </filterItems>
        <filterItems>
            <field>Customer_Extend__c.Show_Sales__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Extend__c</referenceTo>
    <relationshipLabel>Customer Addresses (Customer Extend Sales)</relationshipLabel>
    <relationshipName>Customer_Addresses1</relationshipName>
    <type>Lookup</type>
</CustomField>