force-app/main/default/objects/Customer_Address__c/fields/Customer_Name_Local_Language_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Local_Language_1__c</fullName>
    <label>Customer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>