force-app/main/default/objects/Customer_Address__c/fields/Customer_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Short_Name__c</fullName>
    <label>Search Term(Customer Short Name)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>