force-app/main/default/objects/Customer_Address__c/fields/CustomerDetailType__c.field-meta.xml
<CustomField>
    <fullName>CustomerDetailType__c</fullName>
    <label>Customer Detail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10 Customers outside the Group</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 Internal company</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 Internal factory</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 Staff</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 One-time customer</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 Non-registered customer</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16 Store</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17 Shipping address</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18 Separate households</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>