force-app/main/default/objects/Customer_Address__c/fields/Delete_identification_for_company_region__c.field-meta.xml
<CustomField>
    <fullName>Delete_identification_for_company_region__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDG主数据：公司区域删除标识</description>
    <label>Delete identification for company region</label>
    <type>Checkbox</type>
</CustomField>