force-app/main/default/objects/Customer_Address__c/fields/District_CN__c.field-meta.xml
<CustomField>
    <fullName>District_CN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country_State__c.BelongTo_CNCity__c</field>
            <operation>equals</operation>
            <valueField>$Source.City_CN__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country_State__c</referenceTo>
    <relationshipLabel>Customer Addresses (District)</relationshipLabel>
    <relationshipName>Customer_Addresses_CNDistrict</relationshipName>
    <type>Lookup</type>
</CustomField>