force-app/main/default/objects/Customer_Address__c/fields/Global_Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Global_Location_Number__c</fullName>
    <description>同步到MDG时，根据7+5+1拆分成三个字段</description>
    <label>Global Location Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>