force-app/main/default/objects/Customer_Address__c/fields/Hisense_EntityF__c.field-meta.xml
<CustomField>
    <fullName>Hisense_EntityF__c</fullName>
    <formula>IF( ISBLANK( Customer_Extend__c ) ,  TEXT( Customer__r.Hisense_Entity__c ) ,  TEXT( Customer_Extend__r.Hisense_Entity__c ) )</formula>
    <label>Hisense Entity</label>
    <type>Text</type>
</CustomField>