force-app/main/default/objects/Customer_Address__c/fields/International_Trade_Terms_2__c.field-meta.xml
<CustomField>
    <fullName>International_Trade_Terms_2__c</fullName>
    <description>MDG主数据：国际贸易条款2</description>
    <label>International Trade Terms 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>