force-app/main/default/objects/Customer_Address__c/fields/MDG_Code__c.field-meta.xml
<CustomField>
    <fullName>MDG_Code__c</fullName>
    <label>MDG Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>