force-app/main/default/objects/Customer_Address__c/fields/Payment_Method_MDG__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_MDG__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MDGPaymentMethod_Country</valueSetName>
    </valueSet>
</CustomField>