force-app/main/default/objects/Customer_Address__c/fields/Payment_Term_Sales__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term Sales</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>((1 AND 2) OR (3 AND 4)) OR 5</booleanFilter>
        <filterItems>
            <field>Payment_Term__c.Scope__c</field>
            <operation>equals</operation>
            <value>Oversea Company</value>
        </filterItems>
        <filterItems>
            <field>$Source.Sales_Region__c</field>
            <operation>contains</operation>
            <value>Hisense USA, Hisense Mexico, Hisense Australia, Hisense Malaysia, Hisense South Africa</value>
        </filterItems>
        <filterItems>
            <field>Payment_Term__c.Scope__c</field>
            <operation>equals</operation>
            <value>Headquarters</value>
        </filterItems>
        <filterItems>
            <field>$Source.Sales_Region__c</field>
            <operation>contains</operation>
            <value>USA(OEM), American Sales Department, Middle East and Africa Sales Department, Asia-Pacific Sales Department, Key Account Sales Department, Europe Sales Department, Communications Sales Department</value>
        </filterItems>
        <filterItems>
            <field>$Source.Sales_Region__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Customer Addresses (Payment Term Sales)</relationshipLabel>
    <relationshipName>Customer_Addresses1</relationshipName>
    <type>Lookup</type>
</CustomField>