force-app/main/default/objects/Customer_Address__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <inlineHelpText>Please confirm the correct postal code format, otherwise an error will occur when synchronizing customer information to the SAP system! Thank you!</inlineHelpText>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>