force-app/main/default/objects/Customer_Address__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>MDG主数据：产品组（产品中类）</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>00 通用产品组-营销</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 电视</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 空调-营销</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21 环境电器</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 冰箱-营销</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>31 洗衣机</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>32 冷柜-营销</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>33 酒柜-营销</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>40 手机-通信</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>51 OEM产品</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>52 家电厨电</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>61 0A外购产成品</label>
            </value>
            <value>
                <fullName>68</fullName>
                <label>68 智能商用产品</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>81 医疗自制产品</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>