force-app/main/default/objects/Customer_Address__c/fields/Province_State__c.field-meta.xml
<CustomField>
    <fullName>Province_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province/State</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Province/State does not match country.</errorMessage>
        <filterItems>
            <field>Country_State__c.Belong_To__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country_State__c</referenceTo>
    <relationshipLabel>Customer Addresses</relationshipLabel>
    <relationshipName>Customer_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>