force-app/main/default/objects/Customer_Address__c/fields/Sales_area_deletion_flag__c.field-meta.xml
<CustomField>
    <fullName>Sales_area_deletion_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDG主数据：销售区域删除标志</description>
    <label>Sales area deletion flag</label>
    <type>Checkbox</type>
</CustomField>