force-app/main/default/objects/Customer_Address__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PickList__c.belong_to_he__c</field>
            <operation>equals</operation>
            <valueField>$Source.Hisense_Entity_Sales__c</valueField>
        </filterItems>
        <filterItems>
            <field>PickList__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Master Data(Office)</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PickList__c</referenceTo>
    <relationshipLabel>Customer Addresses (Sales Office)</relationshipLabel>
    <relationshipName>Customer_Addresses2</relationshipName>
    <type>Lookup</type>
</CustomField>