force-app/main/default/objects/Customer_Address__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense USA&apos;) , &apos;Hisense USA&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;USA(OEM)&apos;) , &apos;NA OEM Sales Dept.&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Mexico&apos;) , &apos;Hisense Mexico&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Australia&apos;) , &apos;Hisense Australia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Malaysia&apos;) , &apos;Hisense Malaysia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense South Africa&apos;) , &apos;Hisense South Africa&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Canada&apos;) , &apos;Hisense Canada&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Thailand&apos;) , &apos;Hisense Thailand&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense India&apos;) , &apos;Hisense India&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Indonesia&apos;) , &apos;Hisense Indonesia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Chile&apos;) , &apos;Hisense Chile&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Dubai&apos;) , &apos;Hisense Dubai&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Columbia&apos;) , &apos;Hisense Columbia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense West Africa&apos;) , &apos;Hisense West Africa&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Philippines&apos;) , &apos;Hisense Philippines&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Communications Sales Department&apos;) , &apos;Communications Sales Department&apos;, &apos;&apos;) ) ) ) ) ) ) ) ) ) ) ) ) ) ) )</defaultValue>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hisense USA</fullName>
            </value>
            <value>
                <fullName>Hisense Canada</fullName>
            </value>
            <value>
                <fullName>Hisense Mexico</fullName>
            </value>
            <value>
                <fullName>NA OEM Sales Dept.</fullName>
            </value>
            <value>
                <fullName>Hisense Panama</fullName>
            </value>
            <value>
                <fullName>Hisense Colombia</fullName>
            </value>
            <value>
                <fullName>Hisense Peru</fullName>
            </value>
            <value>
                <fullName>Hisense Brazil</fullName>
            </value>
            <value>
                <fullName>Hisense Chile</fullName>
            </value>
            <value>
                <fullName>Hisense Argentina</fullName>
            </value>
            <value>
                <fullName>Hisense South Africa</fullName>
            </value>
            <value>
                <fullName>Hisense Dubai</fullName>
            </value>
            <value>
                <fullName>Hisense Saudi</fullName>
            </value>
            <value>
                <fullName>Egypt Office</fullName>
            </value>
            <value>
                <fullName>West Africa Office</fullName>
            </value>
            <value>
                <fullName>East Africa Office</fullName>
            </value>
            <value>
                <fullName>Algeria Office</fullName>
            </value>
            <value>
                <fullName>Hisense Japan</fullName>
            </value>
            <value>
                <fullName>Hisense Australia</fullName>
            </value>
            <value>
                <fullName>Hisense New Zealand</fullName>
            </value>
            <value>
                <fullName>Hisense India</fullName>
            </value>
            <value>
                <fullName>South Asia Office</fullName>
            </value>
            <value>
                <fullName>East Asia Office</fullName>
            </value>
            <value>
                <fullName>Israel Office</fullName>
            </value>
            <value>
                <fullName>Europe Sales Dept.</fullName>
            </value>
            <value>
                <fullName>Hisense Russia - Direct Sales</fullName>
            </value>
            <value>
                <fullName>HA Sales Dept.</fullName>
            </value>
            <value>
                <fullName>AC Sales Dept.</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>ASEAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>