force-app/main/default/objects/Customer_Address__c/fields/Sales_View_Freeze_markers__c.field-meta.xml
<CustomField>
    <fullName>Sales_View_Freeze_markers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales View Freeze markers</label>
    <type>Checkbox</type>
</CustomField>