force-app/main/default/objects/Customer_Address__c/fields/SAP_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Code__c</fullName>
    <description>客户SAP编码</description>
    <label>SAP Customer Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>