force-app/main/default/objects/Customer_Address__c/fields/Search_Term2__c.field-meta.xml
<CustomField>
    <fullName>Search_Term2__c</fullName>
    <label>Search Term2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>