force-app/main/default/objects/Customer_Address__c/fields/Shipping_Condition__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Condition__c</fullName>
    <formula>IF( ISBLANK( Customer_Extend__c ) , TEXT( Customer__r.Shipping_Conditions__c) , TEXT( Customer_Extend__r.Shipping_Conditions__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Condition</label>
    <type>Text</type>
</CustomField>