force-app/main/default/objects/Customer_Address__c/fields/Show_Company__c.field-meta.xml
<CustomField>
    <fullName>Show_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Company</label>
    <type>Checkbox</type>
</CustomField>