force-app/main/default/objects/Customer_Address__c/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <label>Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>