force-app/main/default/objects/Customer_Address__c/fields/Street_3__c.field-meta.xml
<CustomField>
    <fullName>Street_3__c</fullName>
    <label>Street 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>