force-app/main/default/objects/Customer_Address__c/fields/Street_4__c.field-meta.xml
<CustomField>
    <fullName>Street_4__c</fullName>
    <label>Street 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>