force-app/main/default/objects/Customer_Address__c/fields/Tax_Number1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number1__c</fullName>
    <label>Tax Number1</label>
    <length>16</length>
    <type>Text</type>
</CustomField>