force-app/main/default/objects/Customer_Address__c/fields/Tax_Number2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number2__c</fullName>
    <label>Tax Number2</label>
    <length>11</length>
    <type>Text</type>
</CustomField>