force-app/main/default/objects/Customer_Address__c/fields/Tax_Number3__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number3__c</fullName>
    <label>Tax Number3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>