force-app/main/default/objects/Customer_Address__c/fields/Township_CN__c.field-meta.xml
<CustomField>
    <fullName>Township_CN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Township</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country_State__c.BelongTo_CNDistrict__c</field>
            <operation>equals</operation>
            <valueField>$Source.District_CN__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country_State__c</referenceTo>
    <relationshipLabel>Customer Addresses (Township)</relationshipLabel>
    <relationshipName>Customer_Addresses_CNTownship</relationshipName>
    <type>Lookup</type>
</CustomField>