force-app/main/default/objects/Customer_Address__c/fields/Trader_Type__c.field-meta.xml
<CustomField>
    <fullName>Trader_Type__c</fullName>
    <label>Trader Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H001</fullName>
                <label>H001 集团内业务伙伴</label>
            </value>
            <value>
                <fullName>H002</fullName>
                <label>H002 集团外业务伙伴</label>
            </value>
            <value>
                <fullName>H003</fullName>
                <label>H003 一次性业务伙伴</label>
            </value>
            <value>
                <fullName>H004</fullName>
                <label>H004 员工类业务伙伴</label>
            </value>
            <value>
                <fullName>H005</fullName>
                <label>H005 门店地址业务伙伴</label>
            </value>
            <value>
                <fullName>H006</fullName>
                <label>H006 非注册实体业务伙伴</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>